The attribute manager now knows about groups, and gives results (eg min and max) based on the selected group.